--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <title>Moja strona</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/section.css">
     <script defer src="js/script.js"></script>
 </head>
 
-<body>
+<body class="body js-body">
 
-    <header class="siteHeader">
-        <h1 class="siteTitle">MOJA STRONA</h1>
-        <button class="themeButton">Zmień na ciemny motyw</button>
+    <header class="header js-header">
+        <h1 class="header__title">MOJA STRONA</h1>
+        <button class="header__button js-button">Zmień na ciemny motyw</button>
     </header>
 
     <main class="main">
 
-        <section class="contentSection">
-            <h2 class="sectionTitle">To ja</h2>
+        <section class="section">
+            <h2 class="section__title">To ja</h2>
             <img width="300" src="images/ja.jpg" alt="Moje zdjęcie w Tatrach">
             <p><i>"Live free or die"</i><br>~ Generał John Stark</p>
             <h2>Coś o mnie</h2>
